objects/CP_CPS_Association_On_Case__c.object
<CustomObject>
    <description>These are CP/CPS Associations on Cases</description>
    <fields>
        <fullName>CP_CPS_Document__c</fullName>
        <label>Document Id</label>
        <referenceTo>CP_CPS_Document_On_Case__c</referenceTo>
        <relationshipLabel>CP/CPS Associations</relationshipLabel>
        <relationshipName>CP_CPS_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CP/CPS Associations</relationshipLabel>
        <relationshipName>CP_CPS_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Certificate_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Certificate Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CP/CPS Associations (On Case)</relationshipLabel>
        <relationshipName>CP_CPS_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <formula>CP_CPS_Document__r.Document_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <formula>TEXT (CP_CPS_Document__r.Document_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <label>CP/CPS Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Association Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CP/CPS Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>